[gd_scene load_steps=4 format=2]

[ext_resource path="res://level_editor/LevelInfoEdit.gd" type="Script" id=1]
[ext_resource path="res://default_styleboxtexture.tres" type="StyleBox" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]

[node name="LevelInfoEdit" type="Node2D"]
script = ExtResource( 1 )

[node name="Holder" type="Label" parent="."]
margin_left = 147.0
margin_top = 9.0
margin_right = 370.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 129, 100 )
theme = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Level Info:"
align = 1

[node name="OkButton" type="Button" parent="Holder"]
margin_left = 58.0
margin_top = 263.0
margin_right = 169.0
margin_bottom = 278.0
text = "Ok"

[node name="Label4" type="Label" parent="Holder"]
margin_left = 151.0
margin_top = 30.0
margin_right = 213.0
margin_bottom = 41.0
text = "Level Name"

[node name="Label5" type="Label" parent="Holder"]
margin_left = 148.0
margin_top = 66.0
margin_right = 211.0
margin_bottom = 77.0
text = "Level Author"

[node name="Label6" type="Label" parent="Holder"]
margin_left = 150.0
margin_top = 102.0
margin_right = 213.0
margin_bottom = 113.0
text = "Level Replay"

[node name="LevelName" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 16.0
margin_right = 145.0
margin_bottom = 51.0

[node name="LevelAuthor" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 54.0
margin_right = 145.0
margin_bottom = 87.0

[node name="LevelReplay" type="TextEdit" parent="Holder"]
margin_left = 7.0
margin_top = 90.0
margin_right = 144.0
margin_bottom = 127.0

[node name="Pointer" type="Sprite" parent="Holder"]
